# autocut-client

./: .eslintrc.js  .gitignore  .npmrc  LICENSE  README.md  README_zh.md  auto-imports.d.ts  autocut.md  components.d.ts  electron-builder.json5  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  unocss.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: help_wanted.md
.github/workflows/: build.yml  ci.yml
adobe-lib/esdebugger-core/mac/: Resources.tgz  esdcorelibinterface.node
adobe-lib/esdebugger-core/win/win32/: esdcorelibinterface.node
adobe-lib/esdebugger-core/win/x64/: esdcorelibinterface.node
electron/: electron-env.d.ts
electron/adobe/: core.ts  index.ts
electron/autocut/: check.ts  download.ts  index.ts
electron/ffmpeg/: index.ts
electron/main/: autocut.ts  download.ts  index.ts
electron/preload/: index.ts
electron/utils/: index.ts
public/resources/: autocut.jsx.template  temp.prproj
script/: post.js  whisper-addon.cpp
script/vad/: CMakeLists.txt
script/whisper.cpp/: CMakeLists.txt  whisper-addon.cpp
src/: App.vue  auto-import.d.ts  components.d.ts  env.d.ts  main.ts  types.d.ts
src/components/: HelloWorld.vue
src/hooks/: useAutoCut.ts  useFFmpeg.ts  usePrVersions.ts
src/i18n/: en.json
src/interface/: adobe.ts  autocut.ts  ffmpeg.ts
src/layout/: index.vue
src/main/: electron-env.d.ts
src/main/adobe/: core.ts  index.ts
src/main/autocut/: check.ts  download.ts  index.ts
src/main/ffmpeg/: index.ts
src/main/main/: autocut.ts  index.ts
src/main/subtitle/: index.ts
src/main/utils/: index.ts  path.ts
src/main/vad/: index.ts
src/main/whisper/: index.ts
src/renderer/hooks/: useAutoCut.ts  useFFmpeg.ts  usePrVersions.ts
src/renderer/i18n/: en.json  index.ts  zh.json
src/renderer/interface/: autocut.ts
src/renderer/router/: index.ts
src/renderer/views/edit/: Subtitle.vue  index.vue
src/renderer/views/edit/components/: SubtitleItem.vue
src/renderer/views/setup/: autocut.vue
src/router/: index.ts
src/samples/: node-api.ts
src/store/: config.ts  index.ts  status.ts
src/views/edit/: Subtitle.vue  index.vue
src/views/edit/components/: SubtitleItem.vue  exportToPr.vue
src/views/setup/: autocut.vue
src/views/status/: index.vue
test/spec/: utls_path.spec.ts
test/unit/whisper/: index.spec.ts
test/whisper/: index.spec.ts
